Bug 147620 - FILEOPEN: Certain SpreadsheetML style settings are ignored (ss:WrapText)
Summary: FILEOPEN: Certain SpreadsheetML style settings are ignored (ss:WrapText)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.2.4.1 release
Hardware: All Windows (All)
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:7.6.0
Keywords:
: 148705 (view as bug list)
Depends on:
Blocks: MSO-XML2003
  Show dependency treegraph
 
Reported: 2022-02-23 22:42 UTC by Martin
Modified: 2023-02-16 22:46 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
File to use in repro steps (756 bytes, text/xml)
2022-02-23 22:44 UTC, Martin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin 2022-02-23 22:42:24 UTC
Description:
When opening a file with the SpreadsheetML format, if a style contains ss:WrapText, ss:Rotate, and likely a few other attributes, they are ignored.

I'm using the MS documentation as a reference:

https://docs.microsoft.com/en-us/previous-versions/office/developer/office-xp/aa140066(v=office.10)#ssalignment-tag

Steps to Reproduce:
1. Have a Excel 2003 XML document (SpreadsheetML) with a style with ss:Alignment -> ss:WrapText, and at least one cell using that style
2. In LibreOffice Calc, open that file

Actual Results:
The cell doesn't have "wrap text" active

Expected Results:
The cell has "wrap text" active


Reproducible: Always


User Profile Reset: No



Additional Info:
[Information automatically included from LibreOffice]
Locale: en-GB
Module: SpreadsheetDocument
[Information guessed from browser]
OS: Windows (All)
OS is 64bit: yes
Comment 1 Martin 2022-02-23 22:44:20 UTC
Created attachment 178492 [details]
File to use in repro steps

I've attached a file that can be used to reproduce this issue. The text is bold and centered, so the style is definitely applied. However, neither "wrap text" nor the rotation are applied to the cell.
Comment 2 Timur 2022-04-23 07:49:35 UTC
*** Bug 148705 has been marked as a duplicate of this bug. ***
Comment 3 Kohei Yoshida 2023-01-27 00:51:53 UTC
This should fix the wrap text and shrink to fit properties

https://gerrit.libreoffice.org/c/core/+/146222
Comment 4 Commit Notification 2023-01-27 01:38:16 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/14c0efccba84a002050d081c961bb0b6e90b009f

tdf#147620: Pick up wrap-text and shrink-to-fit flags in Excel 2003 XML

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Kohei Yoshida 2023-02-15 03:32:15 UTC
I'll mark this as resolved.
Comment 6 Martin 2023-02-16 22:46:20 UTC
Works perfect, thanks!