tdf#147620: Pick up wrap-text and shrink-to-fit flags in Excel 2003 XML

Change-Id: I8afd0522b441a90b431ff433ff87e0c095c8cb95
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146222
Tested-by: Jenkins
Reviewed-by: Kohei Yoshida <kohei@libreoffice.org>